--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&family=Kanit:ital,wght@0,200;0,300;1,300&family=Pacifico&family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React</title>
   </head>
   <body>
